[package]
name = "dnsbl_checker"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
edition = "2018"
license = "MIT"

[dependencies]
dnsbl = { path = ".." }

clap = "2"
env_logger = "0.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tabwriter = "1"
trust-dns = "0.15.0"
